[tool.poetry]
name = "aiohttp-session"
version = "0.1.0"
description = ""
authors = ["mpa <mpa@snejugal.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiogram = {git = "https://github.com/aiogram/aiogram.git", rev = "dev-3.x"}
aiohttp = "^3.6.2"
aiohttp-socks = {version = "^0.3.9", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^4.3.21"
mypy = "^0.770"
black = "^19.10b0"
aresponses = "^2.0.0"
pytest-asyncio = "^0.12.0"
flake8 = "^3.8.1"
pytest-cov = "^2.8.1"

[tool.poetry.extras]
proxy = ["aiohttp-socks"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
